--- a/assignment1/softmax.ipynb
+++ b/assignment1/softmax.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,9 +44,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train data shape:  (49000, 3073)\n",
+      "Train labels shape:  (49000,)\n",
+      "Validation data shape:  (1000, 3073)\n",
+      "Validation labels shape:  (1000,)\n",
+      "Test data shape:  (1000, 3073)\n",
+      "Test labels shape:  (1000,)\n",
+      "dev data shape:  (500, 3073)\n",
+      "dev labels shape:  (500,)\n"
+     ]
+    }
+   ],
    "source": [
     "def get_CIFAR10_data(num_training=49000, num_validation=1000, num_test=1000, num_dev=500):\n",
     "    \"\"\"\n",
@@ -126,9 +141,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 2.342954\n",
+      "sanity check: 2.302585\n"
+     ]
+    }
+   ],
    "source": [
     "# First implement the naive softmax loss function with nested loops.\n",
     "# Open the file cs231n/classifiers/softmax.py and implement the\n",
@@ -139,7 +163,8 @@
     "\n",
     "# Generate a random softmax weight matrix and use it to compute the loss.\n",
     "W = np.random.randn(3073, 10) * 0.0001\n",
-    "loss, grad = softmax_loss_naive(W, X_dev, y_dev, 0.0)\n",
+    "#loss, grad = softmax_loss_naive(W, X_dev, y_dev, 0.0)\n",
+    "loss, grad = softmax_loss_vectorized(W, X_dev, y_dev, 0.0)\n",
     "\n",
     "# As a rough sanity check, our loss should be something close to -log(0.1).\n",
     "print('loss: %f' % loss)\n",
@@ -153,36 +178,79 @@
     "## Inline Question 1:\n",
     "Why do we expect our loss to be close to -log(0.1)? Explain briefly.**\n",
     "\n",
-    "**Your answer:** *Fill this in*\n"
+    "**Your answer:** With no regularization term, each loss term in the softmax function may be at first initialized with random probability. Since we have 10 classes in the problem, the initial condition, if ideally not biased, yields each term to have 1/10 of probability. Thus we result in closer to -log(0.1)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numerical: 2.003859 analytic: 2.107728, relative error: 2.526250e-02\n",
+      "numerical: -0.331730 analytic: -0.290147, relative error: 6.686653e-02\n",
+      "numerical: 0.577649 analytic: 0.035886, relative error: 8.830202e-01\n",
+      "numerical: 2.854481 analytic: 2.643349, relative error: 3.840265e-02\n",
+      "numerical: 1.745927 analytic: 2.083468, relative error: 8.814481e-02\n",
+      "numerical: -1.496486 analytic: -0.345465, relative error: 6.248928e-01\n",
+      "numerical: -2.246446 analytic: -3.159752, relative error: 1.689369e-01\n",
+      "numerical: -0.212633 analytic: 0.005471, relative error: 1.000000e+00\n",
+      "numerical: -2.150416 analytic: -2.143240, relative error: 1.671359e-03\n",
+      "numerical: 0.206245 analytic: -0.141316, relative error: 1.000000e+00\n",
+      "numerical: -0.814709 analytic: -0.449017, relative error: 2.893759e-01\n",
+      "numerical: 0.538409 analytic: 0.706958, relative error: 1.353407e-01\n",
+      "numerical: -2.551304 analytic: -2.247577, relative error: 6.329134e-02\n",
+      "numerical: -4.251968 analytic: -4.286876, relative error: 4.088158e-03\n",
+      "numerical: -0.022518 analytic: 1.088392, relative error: 1.000000e+00\n",
+      "numerical: 0.862355 analytic: 1.765265, relative error: 3.436227e-01\n",
+      "numerical: -1.328591 analytic: -1.263752, relative error: 2.501161e-02\n",
+      "numerical: -1.173032 analytic: -1.412258, relative error: 9.253332e-02\n",
+      "numerical: -1.990592 analytic: -1.843943, relative error: 3.824430e-02\n",
+      "numerical: -1.807213 analytic: -1.787476, relative error: 5.490516e-03\n"
+     ]
+    }
+   ],
    "source": [
     "# Complete the implementation of softmax_loss_naive and implement a (naive)\n",
     "# version of the gradient that uses nested loops.\n",
-    "loss, grad = softmax_loss_naive(W, X_dev, y_dev, 0.0)\n",
+    "from cs231n.classifiers.softmax import softmax_loss_vectorized\n",
+    "loss, grad = softmax_loss_vectorized(W, X_dev, y_dev, 0.0)\n",
+    "#loss, grad = softmax_loss_naive(W, X_dev, y_dev, 0.0)\n",
     "\n",
     "# As we did for the SVM, use numeric gradient checking as a debugging tool.\n",
     "# The numeric gradient should be close to the analytic gradient.\n",
     "from cs231n.gradient_check import grad_check_sparse\n",
-    "f = lambda w: softmax_loss_naive(w, X_dev, y_dev, 0.0)[0]\n",
+    "f = lambda w: softmax_loss_vectorized(w, X_dev, y_dev, 0.0)[0]\n",
+    "#f = lambda w: softmax_loss_naive(w, X_dev, y_dev, 0.0)[0]\n",
     "grad_numerical = grad_check_sparse(f, W, grad, 10)\n",
     "\n",
     "# similar to SVM case, do another gradient check with regularization\n",
-    "loss, grad = softmax_loss_naive(W, X_dev, y_dev, 5e1)\n",
-    "f = lambda w: softmax_loss_naive(w, X_dev, y_dev, 5e1)[0]\n",
+    "loss, grad = softmax_loss_vectorized(W, X_dev, y_dev, 5e1)\n",
+    "f = lambda w: softmax_loss_vectorized(w, X_dev, y_dev, 5e1)[0]\n",
+    "#loss, grad = softmax_loss_naive(W, X_dev, y_dev, 5e1)\n",
+    "#f = lambda w: softmax_loss_naive(w, X_dev, y_dev, 5e1)[0]\n",
     "grad_numerical = grad_check_sparse(f, W, grad, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "naive loss: 2.342954e+00 computed in 35.260081s\n",
+      "vectorized loss: 2.342954e+00 computed in 0.006000s\n",
+      "Loss difference: 0.000000\n",
+      "Gradient difference: 343.992843\n"
+     ]
+    }
+   ],
    "source": [
     "# Now that we have a naive implementation of the softmax loss function and its gradient,\n",
     "# implement a vectorized version in softmax_loss_vectorized.\n",
@@ -208,9 +276,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best validation accuracy achieved during cross-validation: -1.000000\n"
+     ]
+    }
+   ],
    "source": [
     "# Use the validation set to tune hyperparameters (regularization strength and\n",
     "# learning rate). You should experiment with different ranges for the learning\n",
@@ -229,7 +305,7 @@
     "# This should be identical to the validation that you did for the SVM; save    #\n",
     "# the best trained softmax classifer in best_softmax.                          #\n",
     "################################################################################\n",
-    "# Your code\n",
+    "\n",
     "################################################################################\n",
     "#                              END OF YOUR CODE                                #\n",
     "################################################################################\n",
@@ -295,9 +371,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -309,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
