--- a/assignment1/two_layer_net.ipynb
+++ b/assignment1/two_layer_net.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,9 +85,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your scores:\n",
+      "[[-0.97746372 -1.07113299 -0.29871249]\n",
+      " [-0.1664476  -0.42814602  0.45713588]\n",
+      " [-0.01973389 -0.2134387   0.31257557]\n",
+      " [ 0.28089869  0.23870094  0.45648123]\n",
+      " [ 0.10580326  0.18336613  0.23845096]]\n",
+      "\n",
+      "correct scores:\n",
+      "[[-0.81233741 -1.27654624 -0.70335995]\n",
+      " [-0.17129677 -1.18803311 -0.47310444]\n",
+      " [-0.51590475 -1.01354314 -0.8504215 ]\n",
+      " [-0.15419291 -0.48629638 -0.52901952]\n",
+      " [-0.00618733 -0.12435261 -0.15226949]]\n",
+      "\n",
+      "Difference between your scores and correct scores:\n",
+      "7.885455413776936\n"
+     ]
+    }
+   ],
    "source": [
     "scores = net.loss(X)\n",
     "print('Your scores:')\n",
@@ -435,9 +458,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -449,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
