neural net finished

--- a/assignment1/softmax.ipynb
+++ b/assignment1/softmax.ipynb
@@ -141,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss: 2.342954\n",
+      "loss: 2.325755\n",
       "sanity check: 2.302585\n"
      ]
     }
@@ -163,8 +163,8 @@
     "\n",
     "# Generate a random softmax weight matrix and use it to compute the loss.\n",
     "W = np.random.randn(3073, 10) * 0.0001\n",
-    "#loss, grad = softmax_loss_naive(W, X_dev, y_dev, 0.0)\n",
-    "loss, grad = softmax_loss_vectorized(W, X_dev, y_dev, 0.0)\n",
+    "loss, grad = softmax_loss_naive(W, X_dev, y_dev, 0.0)\n",
+    "#loss, grad = softmax_loss_vectorized(W, X_dev, y_dev, 0.0)\n",
     "\n",
     "# As a rough sanity check, our loss should be something close to -log(0.1).\n",
     "print('loss: %f' % loss)\n",
@@ -183,71 +183,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numerical: 2.003859 analytic: 2.107728, relative error: 2.526250e-02\n",
-      "numerical: -0.331730 analytic: -0.290147, relative error: 6.686653e-02\n",
-      "numerical: 0.577649 analytic: 0.035886, relative error: 8.830202e-01\n",
-      "numerical: 2.854481 analytic: 2.643349, relative error: 3.840265e-02\n",
-      "numerical: 1.745927 analytic: 2.083468, relative error: 8.814481e-02\n",
-      "numerical: -1.496486 analytic: -0.345465, relative error: 6.248928e-01\n",
-      "numerical: -2.246446 analytic: -3.159752, relative error: 1.689369e-01\n",
-      "numerical: -0.212633 analytic: 0.005471, relative error: 1.000000e+00\n",
-      "numerical: -2.150416 analytic: -2.143240, relative error: 1.671359e-03\n",
-      "numerical: 0.206245 analytic: -0.141316, relative error: 1.000000e+00\n",
-      "numerical: -0.814709 analytic: -0.449017, relative error: 2.893759e-01\n",
-      "numerical: 0.538409 analytic: 0.706958, relative error: 1.353407e-01\n",
-      "numerical: -2.551304 analytic: -2.247577, relative error: 6.329134e-02\n",
-      "numerical: -4.251968 analytic: -4.286876, relative error: 4.088158e-03\n",
-      "numerical: -0.022518 analytic: 1.088392, relative error: 1.000000e+00\n",
-      "numerical: 0.862355 analytic: 1.765265, relative error: 3.436227e-01\n",
-      "numerical: -1.328591 analytic: -1.263752, relative error: 2.501161e-02\n",
-      "numerical: -1.173032 analytic: -1.412258, relative error: 9.253332e-02\n",
-      "numerical: -1.990592 analytic: -1.843943, relative error: 3.824430e-02\n",
-      "numerical: -1.807213 analytic: -1.787476, relative error: 5.490516e-03\n"
+      "numerical: -0.456494 analytic: -0.411684, relative error: 5.161378e-02\n",
+      "numerical: 1.481695 analytic: 0.590124, relative error: 4.303323e-01\n",
+      "numerical: 1.548984 analytic: 0.609745, relative error: 4.350889e-01\n",
+      "numerical: -0.172594 analytic: -0.490922, relative error: 4.797595e-01\n",
+      "numerical: -1.146121 analytic: -0.532080, relative error: 3.658926e-01\n",
+      "numerical: 2.953680 analytic: 0.864356, relative error: 5.472248e-01\n",
+      "numerical: -0.418010 analytic: 1.508085, relative error: 1.000000e+00\n",
+      "numerical: -1.387765 analytic: 1.382801, relative error: 1.000000e+00\n",
+      "numerical: -1.265414 analytic: -1.857764, relative error: 1.896626e-01\n",
+      "numerical: -0.527983 analytic: -0.163220, relative error: 5.277218e-01\n",
+      "numerical: -0.799458 analytic: -0.587757, relative error: 1.526092e-01\n",
+      "numerical: 1.492887 analytic: 0.120182, relative error: 8.509892e-01\n",
+      "numerical: 1.522576 analytic: 0.285076, relative error: 6.845899e-01\n",
+      "numerical: -2.601534 analytic: -0.215634, relative error: 8.469141e-01\n",
+      "numerical: 1.061104 analytic: 1.062961, relative error: 8.746265e-04\n",
+      "numerical: 1.610530 analytic: 0.880265, relative error: 2.931855e-01\n",
+      "numerical: 0.808644 analytic: 1.567074, relative error: 3.192423e-01\n",
+      "numerical: 1.162622 analytic: 0.020374, relative error: 9.655560e-01\n",
+      "numerical: -0.295059 analytic: -0.149154, relative error: 3.284570e-01\n",
+      "numerical: -0.073477 analytic: 0.752453, relative error: 1.000000e+00\n"
      ]
     }
    ],
    "source": [
     "# Complete the implementation of softmax_loss_naive and implement a (naive)\n",
     "# version of the gradient that uses nested loops.\n",
-    "from cs231n.classifiers.softmax import softmax_loss_vectorized\n",
-    "loss, grad = softmax_loss_vectorized(W, X_dev, y_dev, 0.0)\n",
-    "#loss, grad = softmax_loss_naive(W, X_dev, y_dev, 0.0)\n",
+    "#from cs231n.classifiers.softmax import softmax_loss_vectorized\n",
+    "#loss, grad = softmax_loss_vectorized(W, X_dev, y_dev, 0.0)\n",
+    "loss, grad = softmax_loss_naive(W, X_dev, y_dev, 0.0)\n",
     "\n",
     "# As we did for the SVM, use numeric gradient checking as a debugging tool.\n",
     "# The numeric gradient should be close to the analytic gradient.\n",
     "from cs231n.gradient_check import grad_check_sparse\n",
-    "f = lambda w: softmax_loss_vectorized(w, X_dev, y_dev, 0.0)[0]\n",
-    "#f = lambda w: softmax_loss_naive(w, X_dev, y_dev, 0.0)[0]\n",
+    "#f = lambda w: softmax_loss_vectorized(w, X_dev, y_dev, 0.0)[0]\n",
+    "f = lambda w: softmax_loss_naive(w, X_dev, y_dev, 0.0)[0]\n",
     "grad_numerical = grad_check_sparse(f, W, grad, 10)\n",
     "\n",
     "# similar to SVM case, do another gradient check with regularization\n",
-    "loss, grad = softmax_loss_vectorized(W, X_dev, y_dev, 5e1)\n",
-    "f = lambda w: softmax_loss_vectorized(w, X_dev, y_dev, 5e1)[0]\n",
-    "#loss, grad = softmax_loss_naive(W, X_dev, y_dev, 5e1)\n",
-    "#f = lambda w: softmax_loss_naive(w, X_dev, y_dev, 5e1)[0]\n",
+    "#loss, grad = softmax_loss_vectorized(W, X_dev, y_dev, 5e1)\n",
+    "#f = lambda w: softmax_loss_vectorized(w, X_dev, y_dev, 5e1)[0]\n",
+    "loss, grad = softmax_loss_naive(W, X_dev, y_dev, 5e1)\n",
+    "f = lambda w: softmax_loss_naive(w, X_dev, y_dev, 5e1)[0]\n",
     "grad_numerical = grad_check_sparse(f, W, grad, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "naive loss: 2.342954e+00 computed in 35.260081s\n",
-      "vectorized loss: 2.342954e+00 computed in 0.006000s\n",
+      "naive loss: 2.325755e+00 computed in 34.831184s\n",
+      "vectorized loss: 2.325755e+00 computed in 0.005982s\n",
       "Loss difference: 0.000000\n",
-      "Gradient difference: 343.992843\n"
+      "Gradient difference: 343.104937\n"
      ]
     }
    ],
